test/negative/BadVoid1.java
public class BadVoid1 {
    public BadVoid1() {
        void x = 7;
    }
}
